Fixing search page colour contrast

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -3902,7 +3902,7 @@ article.m-article-card.post:first-of-type {
   opacity: 0;
   overflow-y: auto;
   z-index: 2;
-  background-color: var(--transparent-background-color);
+  background-color: var(--background-color);
   -webkit-overflow-scrolling: touch;
   transform: scale(1.2);
   transition: all 0.4s cubic-bezier(0.165, 0.84, 0.44, 1);
